--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
                 "src/assets"
             ],
             "styles": [
+                "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                 "node_modules/bootstrap/scss/bootstrap.scss",
                 "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
                 "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
@@ -35,7 +36,7 @@
                 "node_modules/jquery-nice-select/scss/nice-select.scss",
                 "src/assets/css/progressbar.min.css",
                 "src/styles.scss",
-                "src/responsive.scss"
+              "src/responsive.scss"
             ],
             "scripts": [
                 "node_modules/jquery/dist/jquery.min.js",
@@ -115,6 +116,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
