--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.2",
+    "@angular/cdk": "^13.3.8",
     "@angular/common": "~13.0.2",
     "@angular/compiler": "~13.0.2",
     "@angular/core": "~13.0.2",
     "@angular/forms": "~13.0.2",
+    "@angular/material": "^13.3.8",
     "@angular/platform-browser": "~13.0.2",
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
@@ -34,9 +36,9 @@
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.2",
     "@angular/language-service": "~13.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
