--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.0",
     "jquery-nice-select": "^1.1.0",
     "magnific-popup": "^1.1.0",
+    "mortgage-calculator": "^1.1.2",
     "ngx-owl-carousel": "^2.0.7",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
